fixed tokenized labels related to preprocessing

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -104,33 +104,9 @@
    },
    "outputs": [],
    "source": [
-    "from datasets import load_dataset, DatasetDict\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset(\"FradSer/OpenSubtitles-en-zh-cn-20m\")\n",
-    "\n",
-    "train_testvalid = dataset[\"train\"].train_test_split(test_size=0.1, seed=42)\n",
-    "test_valid = train_testvalid[\"test\"].train_test_split(test_size=0.5, seed=42)\n",
-    "\n",
-    "dataset = DatasetDict({\n",
-    "    \"train\": train_testvalid[\"train\"],\n",
-    "    \"validation\": test_valid[\"train\"],\n",
-    "    \"test\": test_valid[\"test\"]\n",
-    "})\n",
-    "\n",
-    "def add_translation_column(batch):\n",
-    "    return {\n",
-    "        \"translation\": [\n",
-    "            {\"en\": en, \"zh\": zh} \n",
-    "            for en, zh in zip(batch[\"source\"], batch[\"target\"])\n",
-    "        ]\n",
-    "    }\n",
-    "\n",
-    "dataset = dataset.map(\n",
-    "    add_translation_column,\n",
-    "    batched=True,\n",
-    "    batch_size=1000,  # Good starting point for GPU\n",
-    "    remove_columns=[\"source\", \"target\"]  # Remove original columns\n",
-    ")"
+    "dataset = load_dataset(\"opus100\", \"en-zh\")"
    ]
   },
   {
@@ -250,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "'如果我向她敞开心扉 她就会离开我'"
+       "'A/AC.154/363 2005年9月20日美利坚合众国常驻联合国代表给委员会主席的信[阿、中、英、法、俄、西]'"
       ]
      },
      "execution_count": 3,
@@ -260,11 +236,11 @@
    ],
    "source": [
     "article = dataset['validation'][2]['translation']['en']\n",
-    "inputs = tokenizer(article, return_tensors=\"pt\")\n",
     "\n",
-    "translated_tokens = model.generate(\n",
-    "     **inputs,  max_length=256\n",
-    " )\n",
+    "input_text = f\">>cmn_Hans<< {article}\"\n",
+    "inputs = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "\n",
+    "translated_tokens = model.generate(**inputs,  max_length=256)\n",
     "tokenizer.batch_decode(translated_tokens, skip_special_tokens=True)[0]"
    ]
   },
@@ -283,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "'如果我和她诉苦 她会离开我的'"
+       "'A/AC.154/363 2005年9月20日美利坚合众国常驻联合国代表给委员会主席的信 [阿、中、英、法、俄、西]'"
       ]
      },
      "execution_count": 4,
@@ -304,19 +280,19 @@
    "outputs": [],
    "source": [
     "def preprocess_function(examples):\n",
-    "  inputs = [ex[\"en\"] for ex in examples[\"translation\"]]\n",
-    "  targets = [ex[\"zh\"] for ex in examples[\"translation\"]]\n",
-    "\n",
-    "  model_inputs = tokenizer(inputs, max_length=max_length, truncation=True)\n",
-    "  labels = tokenizer(targets,max_length=max_length, truncation=True)\n",
-    "  model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
-    "\n",
-    "  return model_inputs"
+    "    inputs = [f\">>cmn_Hans<< {ex['en']}\" for ex in examples[\"translation\"]]\n",
+    "    targets = [ex[\"zh\"] for ex in examples[\"translation\"]]\n",
+    "    model_inputs = tokenizer(inputs, max_length=max_length, truncation=True)\n",
+    "    # Use as_target_tokenizer for MarianMT\n",
+    "    with tokenizer.as_target_tokenizer():\n",
+    "        labels = tokenizer(targets, max_length=max_length, truncation=True)\n",
+    "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
+    "    return model_inputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -349,22 +325,7 @@
     "id": "CwlsINDw5uKC",
     "outputId": "244897ba-a44c-4c17-9c66-b6612a8cc667"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d231e37fa4674c4ca66a5780d513b025",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/17665578 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenized_datasets_train = dataset['train'].map(\n",
     "    preprocess_function,\n",
@@ -389,7 +350,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sample 0\n",
+      "Raw label: 然而，劳工组织行政法庭相对于联合国行政法庭似乎有些优势。\n",
+      "Tokenized label ids: [1244, 2, 6244, 31735, 18629, 33802, 3247, 3452, 12722, 10, 0]\n",
+      "Decoded label: 然而,劳工组织行政法庭相对于联合国行政法庭似乎有些优势。\n",
+      "Label length: 11\n",
+      "\n",
+      "Sample 1\n",
+      "Raw label: 这样吧，我载你们到5英里外的贝拉餐厅\n",
+      "Tokenized label ids: [5296, 498, 2, 124, 8124, 1350, 274, 152, 19403, 1024, 12, 39571, 27232, 0]\n",
+      "Decoded label: 这样吧,我载你们到5英里外的贝拉餐厅\n",
+      "Label length: 14\n",
+      "\n",
+      "Sample 2\n",
+      "Raw label: A/AC.154/363 2005年9月20日美利坚合众国常驻联合国代表给委员会主席的信 [阿、中、英、法、俄、西]\n",
+      "Tokenized label ids: [80, 42, 1701, 858, 14254, 2459, 117, 784, 33, 215, 44, 449, 77, 3675, 6535, 47357, 345, 1434, 14, 82, 14, 4000, 14, 357, 14, 5525, 14, 1392, 393, 0]\n",
+      "Decoded label: A/AC.154/363 2005年9月20日美利坚合众国常驻联合国代表给委员会主席的信 [阿、中、英、法、俄、西]\n",
+      "Label length: 30\n",
+      "\n",
+      "Sample 3\n",
+      "Raw label: - 他人在戒备森严的牢里\n",
+      "Tokenized label ids: [30, 319, 12171, 14574, 7096, 4322, 13975, 12, 18265, 571, 0]\n",
+      "Decoded label: - 他人在戒备森严的牢里\n",
+      "Label length: 11\n",
+      "\n",
+      "Sample 4\n",
+      "Raw label: 在整个十九世纪和二十世纪上半叶，正如我们先前听到的那样，有6 000多万欧洲人移民海外，主要移向美洲——我重复一遍，6 000万。\n",
+      "Tokenized label ids: [8, 8450, 12866, 6517, 18, 41406, 158, 3628, 12596, 2, 8170, 234, 5803, 6346, 8857, 2, 122, 135, 1053, 23621, 2131, 130, 2373, 11486, 2, 854, 8957, 150, 5687, 1520, 124, 6498, 19155, 2, 135, 1053, 1730, 10, 0]\n",
+      "Decoded label: 在整个十九世纪和二十世纪上半叶,正如我们先前听到的那样,有6 000多万欧洲人移民海外,主要移向美洲——我重复一遍,6 000万。\n",
+      "Label length: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify preprocessing\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(f\"\\nSample {i}\")\n",
+    "    print(\"Raw label:\", dataset['validation'][i]['translation']['zh'])\n",
+    "    print(\"Tokenized label ids:\", tokenized_datasets_validation[i]['labels'])\n",
+    "    print(\"Decoded label:\", tokenizer.decode(tokenized_datasets_validation[i]['labels'], skip_special_tokens=True))\n",
+    "    print(\"Label length:\", len(tokenized_datasets_validation[i]['labels']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "id": "wQeTtTBe5uwu"
    },
@@ -402,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "id": "G9lP3Idb5wzW"
    },
@@ -430,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -483,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "id": "2oEqkYQr7SXQ"
    },
@@ -502,12 +516,14 @@
     "    gradient_checkpointing=True,\n",
     "    per_device_train_batch_size=32,\n",
     "    learning_rate=1e-5,\n",
-    "    warmup_steps=2,\n",
-    "    max_steps=2000,\n",
+    "    warmup_steps=300,\n",
+    "    max_steps=3000,\n",
     "    fp16=True,\n",
-    "    optim='adafactor',\n",
-    "    per_device_eval_batch_size=16,\n",
-    "    metric_for_best_model=\"eval_bleu\",\n",
+    "    optim='adamw_torch',\n",
+    "    per_device_eval_batch_size=32,\n",
+    "    eval_strategy=\"steps\",\n",
+    "    eval_steps=300, \n",
+    "    metric_for_best_model=\"bleu\",\n",
     "    predict_with_generate=True,\n",
     "    push_to_hub=False,\n",
     ")"
@@ -515,26 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.7.1+cu118\n",
-      "11.8\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(torch.__version__)\n",
-    "print(torch.version.cuda)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -548,7 +545,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Eric Hua\\AppData\\Local\\Temp\\ipykernel_33032\\1313278264.py:3: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Seq2SeqTrainer.__init__`. Use `processing_class` instead.\n",
+      "C:\\Users\\Eric Hua\\AppData\\Local\\Temp\\ipykernel_3440\\1313278264.py:3: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Seq2SeqTrainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Seq2SeqTrainer(\n"
      ]
     },
@@ -558,32 +555,78 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='2000' max='2000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [2000/2000 07:11, Epoch 0/1]\n",
+       "      <progress value='3000' max='3000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [3000/3000 48:25, Epoch 0/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
        "      <th>Step</th>\n",
        "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Bleu</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>1.662600</td>\n",
+       "      <td>300</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.700684</td>\n",
+       "      <td>10.267808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1000</td>\n",
-       "      <td>1.318900</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1.857700</td>\n",
+       "      <td>1.690102</td>\n",
+       "      <td>14.789708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>900</td>\n",
+       "      <td>1.857700</td>\n",
+       "      <td>1.688226</td>\n",
+       "      <td>15.349514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1200</td>\n",
+       "      <td>1.854400</td>\n",
+       "      <td>1.687480</td>\n",
+       "      <td>15.081833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1500</td>\n",
-       "      <td>1.265300</td>\n",
+       "      <td>1.820000</td>\n",
+       "      <td>1.683810</td>\n",
+       "      <td>13.209658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2000</td>\n",
-       "      <td>1.263500</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>1.820000</td>\n",
+       "      <td>1.682773</td>\n",
+       "      <td>10.344941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2100</td>\n",
+       "      <td>1.832200</td>\n",
+       "      <td>1.681652</td>\n",
+       "      <td>13.199083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2400</td>\n",
+       "      <td>1.832200</td>\n",
+       "      <td>1.681083</td>\n",
+       "      <td>12.709203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2700</td>\n",
+       "      <td>1.824500</td>\n",
+       "      <td>1.679697</td>\n",
+       "      <td>15.196545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3000</td>\n",
+       "      <td>1.806400</td>\n",
+       "      <td>1.679275</td>\n",
+       "      <td>15.159275</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -606,10 +649,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=2000, training_loss=1.377555419921875, metrics={'train_runtime': 432.5215, 'train_samples_per_second': 147.97, 'train_steps_per_second': 4.624, 'total_flos': 475136432013312.0, 'train_loss': 1.377555419921875, 'epoch': 0.003622860248165927})"
+       "TrainOutput(global_step=3000, training_loss=1.8325392049153646, metrics={'train_runtime': 2906.5997, 'train_samples_per_second': 33.028, 'train_steps_per_second': 1.032, 'total_flos': 2180927578963968.0, 'train_loss': 1.8325392049153646, 'epoch': 0.096})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +689,7 @@
        " '../model\\\\added_tokens.json')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
